--- a/project.css
+++ b/project.css
@@ -14,16 +14,12 @@ body{
 }
 /*some variables*/
 :root{
-    --main-color:#ebad03;
-    --second-color:#31fdfd;
+    --main-color:#f8a20e;
     --text-color:#070707;
 }
 /*custom scroll bar*/
 html::-webkit-scrollbar{
     width:0.5rem;
-}
-html::-webkit-scrollbar-thumb{
-    background:#d11313;
 }
 html::-webkit-srcoll-track{
     background: var(--text-color);
@@ -63,8 +59,8 @@ header{
     display: flex;
     align-items:center;
     text-decoration: none;
-    background-color: lightseagreen;
-    backdrop-filter: blur(8px);
+    background-color: transparent;
+    backdrop-filter: blur(5px);
     justify-content: space-between;
     padding: 20px, 100px;
     transition: 0.5s linear;
@@ -123,12 +119,13 @@ header{
 
 
 .home{
-    /* width: 100%; */
-    /* min-height: 100vh; */
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
-    /* background:var(--second-color) */
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,min-max(17rem,1fr));
+    align-items: center;
+    gap: 1.5rem;
+    background:var(--second-color)
 }
 .home-textspan{
     font-weight: 600;
@@ -215,6 +212,8 @@ header{
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
     transition: 0.55;
+    border-radius: 50px;
+
 }
 .reviews-container{
     display:grid;
@@ -379,5 +378,5 @@ footer{
 }
 
 h1{
-    font-size: 30px;
+    font-size: 50px;
 }
